Bug 134598 - Calc's Fill Format Mode function not available after New and Cancel (comment 9)
Summary: Calc's Fill Format Mode function not available after New and Cancel (comment 9)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.0.0.beta1+
Hardware: All All
: low trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar-Styles
  Show dependency treegraph
 
Reported: 2020-07-07 08:54 UTC by Steve Fanning (Retired)
Modified: 2020-10-01 14:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Fill Format Mode button unexpectedly greyed out (8.80 KB, image/png)
2020-07-07 17:42 UTC, Steve Fanning (Retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Steve Fanning (Retired) 2020-07-07 08:54:32 UTC
The Fill Format Mode button in the Styles deck of the Sidebar seems to be unexpectedly greyed out most of the time. This was not the case in the 6.4.4.2 build and so the later build has regressed.

Steps to reproduce:
(1) Open Calc.
(2) Open a new, blank spreadsheet.
(3) Open the Styles deck of the Sidebar (e.g. View > Styles or F11).
(4) Note that Default Cell Style is highighted and Fill Format Mode button is not greyed out.
(5) Left-click any style name in the Styles deck (including Default Cell Style) and the Fill Format Mode button becomes greyed out (apparently permanently).

This means that the Fill Format Mode functionality is no longer available in build 7.0.0.0.beta2.
 
My build information:
====================

Version: 7.0.0.0.beta2 (x64)
Build ID: 1c213561a365b5666167321de68c9977500c9612
CPU threads: 6; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: en-GB (en_GB); UI: en-US
Calc: threaded
Comment 1 Timur 2020-07-07 16:26:22 UTC
I don't reproduce in master 7.1+.
To be sure, please install from https://dev-builds.libreoffice.org/daily/master/current.html.
Comment 2 Steve Fanning (Retired) 2020-07-07 17:42:22 UTC
Created attachment 162767 [details]
Fill Format Mode button unexpectedly greyed out
Comment 3 Steve Fanning (Retired) 2020-07-07 18:06:01 UTC
I have checked the functionality on the latest build and still it does not behave as expected (and has regressed since 6.4.4.2).

Build details:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 656fd1ec9123de5dbeecb8db4de5254b05c21e76
CPU threads: 6; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: en-GB (en_GB); UI: en-US
Calc: threaded

Try the following:
(1) Open a fresh spreadsheet.
(2) Open the Styles deck of the Sidebar. Note that the Fill Format button  initially appears to be available.
(3) Press the button and you can use fill mode as expected, but only to apply the Default Cell Style to cells.
(4) But then click on any other style. The Fill Format Mode button turns unavailable and can't be used.

Status changed back to UNCONFIRMED.
Comment 4 BogdanB 2020-07-07 18:17:41 UTC
I can't confirm on
Version: 7.0.0.1
Build ID: 04ba7e3f1e51af6c5d653e543a620e36719083fd
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 5 BogdanB 2020-07-07 18:18:33 UTC
Try a Restart in Safe Mode
Comment 6 Steve Fanning (Retired) 2020-07-07 18:55:02 UTC
I'm becoming confused by all the different builds involved in this discussion!

I have just upgraded my working build to 6.4.5.2 (x64) and that build does not exhibit the problem.

However I just did a complete Safe Mode Restart of my 7.0.0.1 (x64) build including resetting the settings and user interface mods, and the user profile. On that re-started build the problem is evident. Which is a problem for me, because I'm trying to update the Calc Guide for 7.0!
Comment 7 Timur 2020-07-07 19:46:36 UTC
Also no repro 7.1+ in Windows for steps in Comment 3.
Versions are: 6.4.5 is latest working to install, 7.0 is like beta, 7.1+ daily master is like alpha.
Comment 8 Steve Fanning (Retired) 2020-07-08 18:41:15 UTC
I'm not sure I can add anything more than I've said in previous comments. Difficult to address if nobody else can reproduce the fault.
Comment 9 Thomas Lendo 2020-09-15 19:52:02 UTC
I can reproduce the problem with another step (5), not with it from comment 0.

(5) Right-click at any style and select New.
(6) A style dialog window opens. Close it with Cancel.

I see the Format Fill Mode button greyed out until I left-click at any other style in the sidebar.
Comment 10 Timur 2020-09-16 07:04:58 UTC
I'll confirm as trivial for Comment 9. Repro 7.1+.
Let's call it a regression in 7.0. Looks like somebody changed focus to remain at the style after Cancel, because in 6.4 it used to go back to Default.
Comment 11 Timur 2020-09-16 07:48:06 UTC
 fc2d2db21e7b4a83026e781feeba2cc49bc941c2 is the first bad commit
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Wed Apr 29 10:33:00 2020 +0200

    source fe9a13dc0e6d1384416c2a2343223b33925fc925
    previous source cf36fe5eb41910c26d58fb25e54ccf2e0ee01365

author	Caolán McNamara <caolanm@redhat.com>	2020-04-26 15:43:25 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-04-29 09:46:08 +0200
commit fe9a13dc0e6d1384416c2a2343223b33925fc925 (patch)
tree a43a8ea0cc46407b8932dced64cf34d595f3b3e9
parent cf36fe5eb41910c26d58fb25e54ccf2e0ee01365 (diff)
weld SfxTemplatePanelControl
Change-Id: Ib3f6d01ddec37afc3987423dc15ab84ad6475f37
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/92942
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>

Adding Caolán to CC.
Comment 12 Commit Notification 2020-09-17 13:35:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0e46ba3aa1822ba04a319b28bdc1ca4df6805064

tdf#134598 call FmtSelect to update watercan

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Caolán McNamara 2020-09-17 14:33:25 UTC
fixed in master, backport to 7-0 in gerrit
Comment 14 Commit Notification 2020-10-01 07:54:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/0f77b8a44e7ee5541c97304d37f0c52cd8275cba

tdf#134598 call FmtSelect to update watercan

It will be available in 7.0.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Timur 2020-10-01 14:30:38 UTC
(In reply to Timur from comment #10)
> Let's call it a regression in 7.0. Looks like somebody changed focus to
> remain at the style after Cancel, because in 6.4 it used to go back to
> Default.

Verified. Focus again goes back to Default.