tdf#134598 call FmtSelect to update watercan

Change-Id: Idd88acfdaac66b999b0bcd8cf0a4fe69f7ae6ac5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/102926
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>